--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
             <div class="runnerUnicorn" id="runnerUnicorn">🦄</div>
             <div class="runnerThing cloud" id="runnerCloud"></div>
             <div class="runnerThing star" id="runnerStar"></div>
+            <div class="runnerThing star" id="runnerStar2"></div>
+            <div class="runnerThing cloud" id="runnerSpike" style="border-radius:14px;background:rgba(255,79,216,.18);"></div>
           </div>
         </div>
       </div>
@@ -237,6 +239,11 @@
     { src: "./assets_journey_unicorn/images/unicorn1.jpg", caption: "Rainbow Unicorn ✨" },
     { src: "./assets_journey_unicorn/images/unicorn2.jpg", caption: "Cute Baby Unicorn 💖" },
     { src: "./assets_journey_unicorn/images/unicorn3.jpg", caption: "Dreamy Night Unicorn ⭐" }
+    { src: "./assets_journey_unicorn/images/unicorn4.jpg", caption: "Sleepy Unicorn ⭐" }
+    { src: "./assets_journey_unicorn/images/unicorn5.jpg", caption: "Sparkle Unicorn 🌈" }
+    { src: "./assets_journey_unicorn/images/unicorn6.jpg", caption: "Flowy Baby Unicorn ⭐" }
+    { src: "./assets_journey_unicorn/images/unicorn7.jpg", caption: "Baby Star Unicorn ✨" }
+    { src: "./assets_journey_unicorn/images/unicorn8.jpg", caption: "Huggy and Friend Unicorn 🦄" }
   ];
 </script>
 
